force-app/main/default/objects/Leave_Request__c/fields/Approver_HOD__c.field-meta.xml
<CustomField>
    <fullName>Approver_HOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver HOD</label>
    <referenceTo>HOD__c</referenceTo>
    <relationshipLabel>Approvals Assigned</relationshipLabel>
    <relationshipName>Approvals_Assigned_HOD</relationshipName>
    <type>Lookup</type>
</CustomField>