force-app/main/default/objects/Leave_Request__c/fields/Approver_Principal__c.field-meta.xml
<CustomField>
    <fullName>Approver_Principal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver Principal</label>
    <referenceTo>Principal__c</referenceTo>
    <relationshipLabel>Approvals Assigned</relationshipLabel>
    <relationshipName>Approvals_Assigned_Principal</relationshipName>
    <type>Lookup</type>
</CustomField>