force-app/main/default/objects/Leave_Request__c/fields/Employee_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Employee_Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Faculty</label>
    <referenceTo>Faculty__c</referenceTo>
    <relationshipLabel>Leave Requests</relationshipLabel>
    <relationshipName>Leave_Requests_Faculty</relationshipName>
    <type>Lookup</type>
</CustomField>