force-app/main/default/objects/Leave_Request__c/fields/Employee_HOD__c.field-meta.xml
<CustomField>
    <fullName>Employee_HOD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee HOD</label>
    <referenceTo>HOD__c</referenceTo>
    <relationshipLabel>Leave Requests</relationshipLabel>
    <relationshipName>Leave_Requests_HOD</relationshipName>
    <type>Lookup</type>
</CustomField>