force-app/main/default/objects/Leave_Request__c/fields/Leave_Duration__c.field-meta.xml
<CustomField>
    <fullName>Leave_Duration__c</fullName>
    <formula>(End_Date__c-Start_Date__c)+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>