force-app/main/default/objects/Leave_Request__c/fields/Leave_Status_Color__c.field-meta.xml
<CustomField>
    <fullName>Leave_Status_Color__c</fullName>
    <formula>CASE(
    Status__c,
    &quot;Approved&quot;, &quot;🟢 Approved&quot;,
    &quot;Rejected&quot;, &quot;🔴 Rejected&quot;,
    &quot;Pending&quot;, &quot;🟡 Pending&quot;,
    &quot;Pending&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Status Color</label>
    <type>Text</type>
</CustomField>