force-app/main/default/objects/Leave_Request__c/fields/Parent_Approval__c.field-meta.xml
<CustomField>
    <fullName>Parent_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Parent Approval</label>
    <type>Checkbox</type>
</CustomField>