force-app/main/default/objects/Leave_Request__c/fields/Requested_By__c.field-meta.xml
<CustomField>
    <fullName>Requested_By__c</fullName>
    <formula>IF(NOT(ISBLANK(Employee_Faculty__c)), Employee_Faculty__r.Name, Employee_HOD__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requested By</label>
    <type>Text</type>
</CustomField>