force-app/main/default/objects/Leave_Request__c/validationRules/Casual_Leave_Maximum_3_days.validationRule-meta.xml
<ValidationRule>
    <fullName>Casual_Leave_Maximum_3_days</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Leave_Type__c = &quot;Casual Leave&quot;,
    (End_Date__c - Start_Date__c) + 1 &gt; 3
)</errorConditionFormula>
    <errorMessage>Casual Leave cannot exceed 3 days.</errorMessage>
</ValidationRule>