force-app/main/default/objects/Leave_Request__c/validationRules/End_Date_must_be_after_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_must_be_after_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>End Date must be on or after the Start Date.</errorMessage>
</ValidationRule>