force-app/main/default/objects/Leave_Request__c/validationRules/From_Date_must_be_before_To_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>From_Date_must_be_before_To_Date</fullName>
    <active>true</active>
    <errorConditionFormula>From_Date__c &gt; To_Date__c</errorConditionFormula>
    <errorMessage>From Date cannot be after To Date.</errorMessage>
</ValidationRule>