force-app/main/default/objects/Leave_Request__c/validationRules/Leave_cannot_start_in_past.validationRule-meta.xml
<ValidationRule>
    <fullName>Leave_cannot_start_in_past</fullName>
    <active>true</active>
    <errorConditionFormula>Start_Date__c &lt; TODAY()</errorConditionFormula>
    <errorMessage>Start Date cannot be in the past.</errorMessage>
</ValidationRule>