force-app/main/default/objects/Leave_Request__c/validationRules/Reason_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Reason__c)</errorConditionFormula>
    <errorMessage>Please enter the reason for the leave request.</errorMessage>
</ValidationRule>